# binance-earn-strategy

./: .env.example  ESTRATEGIA_PORTAFOLIO.md  GUIA_USO_ACCIONES.md  pyproject.toml  requirements.txt
scripts/: run_strategy.py
src/: __init__.py  client.py  config.py  strategy.py
